Remove photo for now

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 
     <!-- Header / Hero Section --><header class="py-16 md:py-24 max-w-4xl mx-auto px-6">
         <div class="text-center space-y-4">
-            <!-- ORIGINAL UPLOADED PHOTO - Directly referenced by filename -->
-            <!-- The Canvas environment handles the display of uploaded files via filename -->
-            <img src="supritiPhoto.jpeg" 
-                 alt="Supriti Singh - Professional Headshot" 
-                 class="w-32 h-32 rounded-full mx-auto object-cover shadow-lg border-4 border-blue-500">
+            <!-- PHOTO SECTION REMOVED - Space will now be centered and clean -->
             
             <h1 class="text-5xl md:text-6xl font-extrabold tracking-tight">
                 SUPRITI SINGH
